fix: the toc jump and styling issues (#119)
#### What type of PR is this?

/kind bug

#### What this PR does / why we need it:

解决 TOC 样式以及点击 toc 后的定位问题

#### Which issue(s) this PR fixes:

Fixes #116 

#### Does this PR introduce a user-facing change?
```release-note
解决 TOC 样式及其点击后的定位问题
```

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -38,7 +38,7 @@ body {
   text-shadow: 2px 2px 10px #000;
 }
 
-.is-active-li {
+.is-active-link {
   @apply rounded bg-gray-100 dark:bg-slate-600;
 }
 
